# jeode

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  build.sh  zensical.toml
.github/workflows/: Release.yml
cmake/: imgui_angle_loader.patch  jeode.nsi.in  package.cmake
docs/: index.md
docs/api/: index.md  native.md
docs/api/lua/: console.md  fs.md  index.md  jeode.md  net.md  task.md
docs/api/lua/ui/: containers.md  index.md  layout.md  state.md  widgets.md
docs/assets/: extra.css
docs/community/: index.md
docs/start/: installation.md
examples/api-dumper/: init.lua  manifest.json
examples/auto-updater/: init.lua  manifest.json  sources.json
examples/auto-updater/lib/: another.lua  test.lua
examples/console-api/: init.lua  manifest.json
examples/native/: Makefile  jeode_native.h  main.c  manifest.json
scripts/: build.sh  build_examples.sh  dependencies.sh  imgui_angle_loader.patch  jeode.nsi
src/: CMakeLists.txt  libjeode.def  winhttp.def
src/core/: config.cpp  config.h  keybind.cpp  keybind.h  log.cpp  log.h  main.cpp  memory.h  overlay.cpp  overlay.h  version.h
src/env/: api.cpp  api.h  environment.cpp  environment.h  sandbox.cpp  sandbox.h
src/env/api/: console.cpp  console.h  file.cpp  file.h  fs.cpp  fs.h  jeode.cpp  jeode.h  mod.cpp  mod.h  net.cpp  net.h  task.cpp  task.h  ui.cpp  ui.h
src/env/api/ui/: button.cpp  checkbox.cpp  child.cpp  code_editor.cpp  color.cpp  dropdown.cpp  input.cpp  layout.cpp  slider.cpp  state.cpp  tabs.cpp  text.cpp  tooltip.cpp  tree.cpp  widgets.h  window.cpp
src/hooks/: egl_hook.cpp  egl_hook.h  file_hook.cpp  file_hook.h  hook_manager.cpp  hook_manager.h  scheduler_hook.cpp  scheduler_hook.h  ssl_hook.cpp  ssl_hook.h
src/loader/: mod.cpp  mod.h  mod_loader.cpp  mod_loader.h  native_mod.cpp  native_mod.h  schema.cpp  schema.h
src/lua/: game_lua.cpp  game_lua.h  stubs_lua.S  thread.cpp  thread.h
src/proxy/: proxy.cpp  proxy.h  proxy_main.cpp  stubs_proxy.S  updater.cpp  updater.h
